# southside-smells

./: .gitignore  CLAUDE.md  README.md  hyde_park_smell_analysis.ipynb  main.py  purpleair_history_pull.py  purpleair_plume_history_all.csv  pyproject.toml
.github/workflows/: monitor.yml  se-wind-alert.yml
analysis/: purpleair_history_pull.py  purpleair_sensor_scan.py
code/: chicago_openair_pull.py  epa_aqs_evaluate.py  hyde_park_smell_analysis.ipynb  purpleair_sensor_scan.py  smell_monitor.py
data/: epa_aqs_monitors.json  monitor_history.json  open_meteo_hyde_park.json  purpleair_plume_history.csv  purpleair_plume_sensors.json
docs/: index.html
