[project]
name = "southside-smells"
version = "0.1.0"
description = "Data science investigation into recurring chemical odors in Hyde Park, Chicago"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
